--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
-        "stdlib.h": "c",
-        "emprunt.h": "c"
+        "typeinfo": "c",
+        "emprunt.h": "c",
+        "books.h": "c",
+        "student.h": "c",
+        "accctrl.h": "c"
     }
 }
